Readme Updated and Text search implemented

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <form action="/filter" method="post">
 	Text : <input type="text" name="text"> <br>
+	userName : <input type="text" name="userName"> <br>
 	screenName : <input type="text" name="screenName"> <br>
 	retweetCount : <input type="number" name="retweetCount"> <br>
 	UserfollowerCount : <input type="number" name="UserfollowerCount"> <br>
