Update index file

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	</div>
 	<section class="row">
 		<div class="header">
-			<h1>Data Streamer</h1>
+			<h1>Twitter Live Data Streamer</h1>
 			<button class="btn btn-lg btn-primary" ng-click="seeTrending()">See Trending Now</button>
 			<button class="btn btn-lg btn-success" onClick="LiveStream();">See Live Straeaming</button>
 		</div>
