package.json added

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<link rel="stylesheet" href="./assets/css/style.css">
 	<link rel="shortcut icon" href="./icon.png" type="image/png"/>
 
-	<script src="http://d3js.org/d3.v3.min.js"></script>
+	<script src="./assets/js/d3.v3.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.min.js"></script>
 </head>
 <body ng-controller="mycntrl">
