--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
     };
 
-    var socket = io.connect('http://localhost:3000');
+    var socket = io.connect('https://twitterstreamer.herokuapp.com');
     console.log(socket);
     //var socket = io();
 
