--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					<label class="col-md-6">End Date:</label>
 					<input class="col-md-5" type="date" name="endDate" ng-model="endDate"><br>
 				</div>
-				<div class="form-group">
+				<!-- <div class="form-group">
 					<label class="col-md-6">Languages: </label>
 					<div class="col-md-6">	
 						<label>English</label>
@@ -113,7 +113,7 @@
 						<input type="checkbox" value="ko" name="language" ng-model="language">
 					</div>
 					
-				</div>
+				</div> -->
 				<button type="Submit" class="btn btn-primary btn-lg pull-right" ng-click="searchTweets();">Apply Filter</button>
 			</form>
 		</div>
