See Trending implemented

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<div class="header">
 			<h1>Twitter Live Data Streamer</h1>
 			<button class="btn btn-lg btn-primary" ng-click="seeTrending()">See Trending Now</button>
-			<button class="btn btn-lg btn-success" onClick="LiveStream();">See Live Straeaming</button>
+			<button class="btn btn-lg btn-success" onClick="LiveStream();">See Live Streaming</button>
 		</div>
 	</section>
 	<section class="row filterSearch">
